Fixed literally everything

--- a/howto.html
+++ b/howto.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div id='nav'>
-    <img src="https://dl.plaguecraft.xyz/dir/images/fgimg/fgsmp.jpg" id="logo" length="265"  />
+    <img src="img/fgsmp.jpg" id="logo" length="265"  />
 
  <nav>   
    <ul class="nav">
@@ -20,7 +20,6 @@
   <div class="clear"></div>
   </div>
 <h1>How-to</h1>
-<img class="center" src="https://dl.plaguecraft.xyz/dir/images/fgimg/fgsmp.jpg">
 <hr>
 <section id="howto">
         <p>Need to know what we need to have you on the server? Follow this guide!</p>
@@ -51,16 +50,16 @@
                         <p>&copy; Team Moonqii, All Rights Reserved.<br>
                                 Website designed by <a href="https://twitter.com/_awexx" target="_blank">Alex Frantz.</a></p>
                         <a href="https://twitter.com/fogsmp" target="_blank">
-                                <img src="https://dl.plaguecraft.xyz/dir/images/social-icons/twitter-gray.png">
+                                <img src="img/social-icons/twitter-gray.png">
                         </a>
                         <a href="https://instagram.com/moonqii" target="_blank">
-                                <img src="https://dl.plaguecraft.xyz/dir/images/social-icons/instagram-gray.png">
+                                <img src="img/social-icons/instagram-gray.png">
                         </a>
                         <a href="https://youtube.com/c/moonqii" target="_blank">
-                                <img src="https://dl.plaguecraft.xyz/dir/images/social-icons/gray-youtube.png">
+                                <img src="img/social-icons/gray-youtube.png">
                         </a>
                         <a href="discord" target="_blank">
-                                <img src="https://dl.plaguecraft.xyz/dir/images/social-icons/discord-gray.png">
+                                <img src="img/social-icons/discord-gray.png">
                 </footer>
 </body>
 </html>
