--- a/join.html
+++ b/join.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<title>Home - Forest Grove</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 <div id='nav'>
@@ -54,17 +54,17 @@
 
                         <footer id="main-footer">
                         <p>&copy; Team Moonqii, All Rights Reserved.<br>
-                                Website designed by <a style="color:white;" href="https://twitter.com/_awexx" target="_blank">Alex Frantz.</a></p>
-                        <a id="footer-links" href="https://twitter.com/fogsmp" target="_blank">
-                                <img src="img/social-icons/twitter-gray.png">
+                                Website designed by <a href="https://twitter.com/_awexx" target="_blank">Alex Frantz.</a></p>
+                        <a href="https://twitter.com/fogsmp" target="_blank">
+                                <img src="https://dl.plaguecraft.xyz/dir/images/social-icons/twitter-gray.png">
                         </a>
-                        <a id="footer-links" href="https://instagram.com/moonqii" target="_blank">
-                                <img src="img/social-icons/instagram-gray.png">
+                        <a href="https://instagram.com/moonqii" target="_blank">
+                                <img src="https://dl.plaguecraft.xyz/dir/images/social-icons/instagram-gray.png">
                         </a>
-                        <a id="footer-links"href="https://youtube.com/c/moonqii" target="_blank">
-                                <img src="img/social-icons/gray-youtube.png">
+                        <a href="https://youtube.com/c/moonqii" target="_blank">
+                                <img src="https://dl.plaguecraft.xyz/dir/images/social-icons/gray-youtube.png">
                         </a>
-                        <a id="footer-links" href="discord" target="_blank">
-                                <img src="img/social-icons/discord-gray.png">
+                        <a href="discord" target="_blank">
+                                <img src="https://dl.plaguecraft.xyz/dir/images/social-icons/discord-gray.png">
                 </footer>
 </html>
