--- a/season-info.html
+++ b/season-info.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div id='nav'>
-    <img src="https://dl.plaguecraft.xyz/dir/images/fgimg/fgsmp.jpg" id="logo" length="265"  />
+    <img src="img/fgsmp.jpg" id="logo" length="265"  />
 
  <nav>   
    <ul class="nav">
@@ -20,14 +20,14 @@
   <div class="clear"></div>
   </div>
 <h1>Seasonal Information</h1>
-<img class="center" src="https://dl.plaguecraft.xyz/dir/images/fgimg/fgsmp.jpg">
+<img class="center" src="img/fgsmp.jpg">
 <hr>
 <section id="main-seasoninfo">
         <h1>Here, you can find info about the season times and dates.</h1>
         <hr>
-        <p style="text-align:center;">Season 1 is <strong>live!</strong><br></p>
-        <p style="text-align:center;">We're live with our first season of Forest Grove SMP! This is very new to us, so if something is to break, let the devs know!<br>
-Season 1 is to last from Friday, November 27th @ 1:00pm ET to December 27th @ 1:00pm ET. By that point, we will reset the server and do maintenance to improve :D</p>
+        <p style="text-align:center;">Season 2 is <strong>live!</strong><br></p>
+        <p style="text-align:center;">We're live with our second season of Forest Grove SMP! This is very new to us, so if something is to break, let the devs know!<br>
+Season 2 is to last from Wednesday, December 23rd @ 1:00pm ET to January 23rd @ 1:00pm ET. By that point, we will reset the server and do maintenance to improve :D</p>
 <h2>Do your Weekly Challenges!</h2>
         <p>Make sure your weekly challenges are done as listed in the Discord server!</p>
 <hr>
@@ -38,16 +38,16 @@ Season 1 is to last from Friday, November 27th @ 1:00pm ET to December 27th @ 1:
                         <p>&copy; Team Moonqii, All Rights Reserved.<br>
                                 Website designed by <a href="https://twitter.com/_awexx" target="_blank">Alex Frantz.</a></p>
                         <a href="https://twitter.com/fogsmp" target="_blank">
-                                <img src="https://dl.plaguecraft.xyz/dir/images/social-icons/twitter-gray.png">
+                                <img src="img/social-icons/twitter-gray.png">
                         </a>
                         <a href="https://instagram.com/moonqii" target="_blank">
-                                <img src="https://dl.plaguecraft.xyz/dir/images/social-icons/instagram-gray.png">
+                                <img src="img/social-icons/instagram-gray.png">
                         </a>
                         <a href="https://youtube.com/c/moonqii" target="_blank">
-                                <img src="https://dl.plaguecraft.xyz/dir/images/social-icons/gray-youtube.png">
+                                <img src="img/social-icons/gray-youtube.png">
                         </a>
                         <a href="discord" target="_blank">
-                                <img src="https://dl.plaguecraft.xyz/dir/images/social-icons/discord-gray.png">
+                                <img src="img/social-icons/discord-gray.png">
                 </footer>
 
 </body>
