--- a/team.html
+++ b/team.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div id='nav'>
-    <img src="https://dl.plaguecraft.xyz/dir/images/fgimg/fgsmp.jpg" id="logo" length="265"  />
+    <img src="img/fgsmp.jpg" id="logo" length="265"  />
 
  <nav>   
    <ul class="nav">
@@ -31,15 +31,15 @@
 </section>
 <section id="moon">
 <a href="https://twitter.com/moonqii" target="_blank">
-<img src="https://dl.plaguecraft.xyz/dir/images/moonqii/logos/unnamed.jpg">
+<img src="img/unnamed.jpg">
 </a>
   <p>Moonqii<br>
   Owner & Developer of FGSMP<br>
   moonqii#4879</p>
 </section>
 <section id="awex">
-<a href="https://twitter.com/_awexx" target="_blank">
-<img src="https://dl.plaguecraft.xyz/dir/assets/fgsmp/img/team/awex.jpg" class="center2">
+<a href="https://twitter.com/itsawexx" target="_blank">
+<img src="img/team/awex.jpg" class="center2">
 </a>
   <p>awexx<br>
   Backend Engineer/Web Development on FGSMP Services<br>
@@ -47,13 +47,13 @@
 </section>
 <section id="ref">
 <a href="https://youtube.com/c/refthegeneric" target="_blank">
-<img src="https://dl.plaguecraft.xyz/dir/assets/fgsmp/img/team/ref.png" class="center2">
+<img src="img/team/ref.png" class="center2">
 </a>
   <p>Ref<br>
   Moderator on FGSMP Servers</p>
 </section>
 <a href="https://twitch.tv/reedemi" target="_blank">
-<img src="https://dl.plaguecraft.xyz/dir/assets/fgsmp/img/team/demi.png" class="center2">
+<img src="img/team/demi.png" class="center2">
 </a>
   <p>Demi<br>
   Helper on FGSMP Builders</p>
@@ -65,14 +65,14 @@
                         <p>&copy; Team Moonqii, All Rights Reserved.<br>
                                 Website designed by <a href="https://twitter.com/_awexx" target="_blank">Alex Frantz.</a></p>
                         <a href="https://twitter.com/fogsmp" target="_blank">
-                                <img src="https://dl.plaguecraft.xyz/dir/images/social-icons/twitter-gray.png">
+                                <img src="img/social-icons/twitter-gray.png">
                         </a>
                         <a href="https://instagram.com/moonqii" target="_blank">
-                                <img src="https://dl.plaguecraft.xyz/dir/images/social-icons/instagram-gray.png">
+                                <img src="img/social-icons/instagram-gray.png">
                         </a>
                         <a href="https://youtube.com/c/moonqii" target="_blank">
-                                <img src="https://dl.plaguecraft.xyz/dir/images/social-icons/gray-youtube.png">
+                                <img src="img/social-icons/gray-youtube.png">
                         </a>
                         <a href="discord" target="_blank">
-                                <img src="https://dl.plaguecraft.xyz/dir/images/social-icons/discord-gray.png">
+                                <img src="img/social-icons/discord-gray.png">
                 </footer>
