--- a/updates.html
+++ b/updates.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div id='nav'>
-    <img src="https://dl.plaguecraft.xyz/dir/images/fgimg/fgsmp.jpg" id="logo" length="265"  />
+    <img src="img/fgsmp.jpg" id="logo" length="265"  />
 
  <nav>   
    <ul class="nav">
@@ -19,28 +19,28 @@
 </nav>
   <div class="clear"></div>
   </div>
-<h1>Update Log - 12/9/20</h1>
-<img class="center" src="https://dl.plaguecraft.xyz/dir/images/fgimg/fgsmp.jpg">
+<h1>Update Log - 12/23/20</h1>
+<img class="center" src="img/fgsmp.jpg">
 <hr>
 <section id="updatelog">
-<p>We're about 2 weeks into launch! 2 weeks to go until season end!<br>
-With our birth, there is a looooot of patches we've needed to make.</p>
+<p>We're <strong>live</strong> with Season 2 of the Forest Grove SMP!<br>
+This comes with a lot of changes internally and externally, all listed below!</p>
 <hr>
 
 <h2>Server-based issues</h2>
-<p>Hotfixes: Fixed the issue with an <strong>Internal Server Error</strong> when users attempted to enter the Nether dimension<br>
-Fixed issues where users could not throw our pokemon due to high TPS (ping) lag.<br>
-Fixed permissions where people could not link their accounts to Discord from Minecraft<br>
-Allowed /pokeheal and /wondertrade to be used univerally<br>
-Fixed slow speeds when attempting to install the Modpack from our servers<br>
+<p>We reworked the internals of our website!<br>
+Fixed issues where people could only download the Modpack at a few kb/s from our servers<br>
+Fixed permissions with people who couldn't use D2MC commands via channel listeners<br>
+Fixed constant crashes with the bot; Config errors caused the file to reset and regen its self upon reboot<br>
+Fixed problems with redirections<br>
 Squashed some bugs<br><br>
 
-<p>Added (suggested): JEI (Just Enough Items), FullBright, Optifine, VeinMiner.</p>
+<p>Added: World Protection Plugins, Staff plugins</p>
 
 <h2>Web Service issues</h2>
         <p>Fixed erroring resolvement<br>
-                Patched index access to internal documents, images, and more.<br>
-        Fixed some domains adding files in the domain name (ex. pixelmon.moonqii.xyzimg instead of pixelmon.moonqii.xyz/img)</p>
+        Removed server access overall<br>
+        Fixed dead redirections to new web server</p>
 
 
 
@@ -52,16 +52,16 @@ Keep tabs here for future updates, additions, and more!</p>
                         <p>&copy; Team Moonqii, All Rights Reserved.<br>
                                 Website designed by <a href="https://twitter.com/_awexx" target="_blank">Alex Frantz.</a></p>
                         <a href="https://twitter.com/fogsmp" target="_blank">
-                                <img src="https://dl.plaguecraft.xyz/dir/images/social-icons/twitter-gray.png">
+                                <img src="img/social-icons/twitter-gray.png">
                         </a>
                         <a href="https://instagram.com/moonqii" target="_blank">
-                                <img src="https://dl.plaguecraft.xyz/dir/images/social-icons/instagram-gray.png">
+                                <img src="img/social-icons/instagram-gray.png">
                         </a>
                         <a href="https://youtube.com/c/moonqii" target="_blank">
-                                <img src="https://dl.plaguecraft.xyz/dir/images/social-icons/gray-youtube.png">
+                                <img src="img/social-icons/gray-youtube.png">
                         </a>
                         <a href="discord" target="_blank">
-                                <img src="https://dl.plaguecraft.xyz/dir/images/social-icons/discord-gray.png">
+                                <img src="img/social-icons/discord-gray.png">
                 </footer>
 </body>
 </html>
