--- a/discord.html
+++ b/discord.html
@@ -6,7 +6,7 @@
         <meta http-equiv="refresh" content="5; URL=https://discord.gg/FQuwGtZm57" />
 </head>
 <body>
-        <img style="display:block; margin-left:auto; margin-right:auto; width:10%; padding-top:300px;" src="https://dl.plaguecraft.xyz/dir/images/moonqii/logos/unnamed.jpg">
+        <img style="display:block; margin-left:auto; margin-right:auto; width:10%; padding-top:300px;" src="img/unnamed.jpg">
 
 <h1 style="text-align:center; color:red;">You are being redirected off of our server.</h1>
 <p style="text-align:center;"><em>If your browser doesn't support Automatic Redirection, please click <a href="https://discord.gg/FQuwGtZm57">here.</a></em></p>
