--- a/thankyou.html
+++ b/thankyou.html
@@ -3,7 +3,7 @@
 <head>
         <title>Thank you! - Forest Grove Pixelmon</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <meta http-equiv="refresh" content="10; URL=mp/latest/moonqii-pixelmon-latest.zip" />
+        <meta http-equiv="refresh" content="10; URL=https://dl.plaguecraft.xyz/forestgrove/mp-latest/forest-grove-latest.zip" />
 </head>
 <body>
                         <nav id="navbar">
@@ -17,7 +17,7 @@
                 </div>
         </nav>
 <h1>Download Completion!</h1>
-<img class="center" src="https://dl.plaguecraft.xyz/dir/images/fgimg/fgsmp.jpg">
+<img class="center" src="img/fgsmp.jpg">
 <section id="thankyou">
         <h1>Thank you for downloading!</h1>
         <p>Thanks for downloading the modpack, and welcome to the Moonqii SMP team!</p>
@@ -33,15 +33,15 @@
                         <p>&copy; Team Moonqii, All Rights Reserved.<br>
                                 Website designed by <a href="https://twitter.com/_awexx" target="_blank">Alex Frantz.</a></p>
                         <a href="https://twitter.com/fogsmp" target="_blank">
-                                <img src="social-icons/twitter-gray.png">
+                                <img src="http://moonqii.xyz/img/social-icons/twitter-gray.png">
                         </a>
                         <a href="https://instagram.com/moonqii" target="_blank">
-                                <img src="social-icons/instagram-gray.png">
+                                <img src="http://moonqii.xyz/img/social-icons/instagram-gray.png">
                         </a>
                         <a href="https://youtube.com/c/moonqii" target="_blank">
-                                <img src="social-icons/gray-youtube.png">
+                                <img src="http://moonqii.xyz/img/social-icons/gray-youtube.png">
                         </a>
                         <a href="https://moonqii.xyz/discord" target="_blank">
-                                <img src="social-icons/discord-gray.png">
+                                <img src="http://moonqii.xyz/img/social-icons/discord-gray.png">
                 </footer>
 </html>
