Updated Download Link

--- a/download.html
+++ b/download.html
@@ -2,7 +2,7 @@
 <html>
 <head>
         <title>Redirecting you..</title>
-        <meta http-equiv="refresh" content="0; URL=thankyou" />
+        <meta http-equiv="refresh" content="0; URL=https://github.com/awexxx/forestgrovesmp/releases" />
 </head>
 <body>
 </html>
