--- a/thankyou.html
+++ b/thankyou.html
@@ -1,47 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-        <title>Thank you! - Forest Grove Pixelmon</title>
-        <link rel="stylesheet" type="text/css" href="css/style.css">
-        <meta http-equiv="refresh" content="10; URL=https://dl.plaguecraft.xyz/forestgrove/mp-latest/forest-grove-latest.zip" />
+        <title>Redirecting you..</title>
+        <meta http-equiv="refresh" content="0; URL=thankyou" />
 </head>
 <body>
-                        <nav id="navbar">
-                        <div class="container">
-                                <ul>
-                                        <li><a href="join">Join</a>
-                                        <li><a href="howto">How to's</a>
-                                        <li><a href="season-info">Season Info</a>
-                                        <li><a href="updates">Update Log</a>
-                        </ul>
-                </div>
-        </nav>
-<h1>Download Completion!</h1>
-<img class="center" src="img/fgsmp.jpg">
-<section id="thankyou">
-        <h1>Thank you for downloading!</h1>
-        <p>Thanks for downloading the modpack, and welcome to the Moonqii SMP team!</p>
-        <hr>
-        <h4>WARNING!</h4>
-        <p>This modpack is not to be distributed to anyone outside of the roster.<br>
-                Only people who have whitelisted access can join the server. If you'd like to make a player recommendation, put it in the <a href="discord">Discord server.</a><br>
-        If you try to join the server but you're not whitelisted, ping Moon or another developer that is online to whitelist you.<br>
-        Should you find any bugs, ping a developer to patch them.</p>
-</section>
-</body>
-                        <footer id="main-footer">
-                        <p>&copy; Team Moonqii, All Rights Reserved.<br>
-                                Website designed by <a href="https://twitter.com/_awexx" target="_blank">Alex Frantz.</a></p>
-                        <a href="https://twitter.com/fogsmp" target="_blank">
-                                <img src="http://moonqii.xyz/img/social-icons/twitter-gray.png">
-                        </a>
-                        <a href="https://instagram.com/moonqii" target="_blank">
-                                <img src="http://moonqii.xyz/img/social-icons/instagram-gray.png">
-                        </a>
-                        <a href="https://youtube.com/c/moonqii" target="_blank">
-                                <img src="http://moonqii.xyz/img/social-icons/gray-youtube.png">
-                        </a>
-                        <a href="https://moonqii.xyz/discord" target="_blank">
-                                <img src="http://moonqii.xyz/img/social-icons/discord-gray.png">
-                </footer>
 </html>
